tests/fixtures/positive/style/ForbiddenOptIn.kt
package style

@OptIn(ExperimentalApi::class)
fun example() {
    println("using experimental API")
}
