tests/fixtures/negative/complexity/StringLiteralDuplication.kt
package complexity

class StringLiteralDuplication {
    fun example() {
        println("hello")
        println("hello")
        println("world")
    }
}
